# gadget2

./: CMakeLists.txt  README  README.md
Gadget2/: CMakeLists.txt  io.c
Gadget2/parameterfiles/: cluster.param  gassphere.param  gassphere.param-usedvalues
N-GenIC/: CMakeLists.txt  README  ics.param  make_dummy_glass.cc  power.c
